--- a/tribute/tribute.html
+++ b/tribute/tribute.html
@@ -9,22 +9,23 @@
   </head>
 
   <body>
-    <main>
-      <h1>Dr. Norman Borlaug</h1>
+    <main id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
       <p id="three">The man who saved a billion lives</p>
-      <div class="picture-container">
+      <div id="img-div">
         <img
+          id="image"
           alt="hero's picture"
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
           class="center"
         />
-        <p id="one">
+        <p id="image-caption">
           Dr. Norman Borlaug, third from the left, trains biologists in Mexico
           on how to increase wheat yields - part of his life-long war on hunger.
         </p>
       </div>
 
-      <div class="list-container">
+      <div id="tribute-info">
         <h3>Here's a Timeline of Dr. Borlaug life:</h3>
         <ul>
           <li><b>1914</b> - Born in Cresco, Iowa</li>
@@ -109,7 +110,10 @@
       <h2>
         If you have time you should read more about this incredible human being
         on his
-        <a href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+        <a
+          id="tribute-link"
+          href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+          target="_blank"
           ><u> Wikipedia entry </u></a
         >
       </h2>
