--- a/landingpage/landingpage.html
+++ b/landingpage/landingpage.html
@@ -27,6 +27,7 @@
           <li><a href="#features" class="nav-link">Features</a></li>
           <li> <a href="#how-it-works" class="nav-link">How It Works</a></li>
           <li> <a href="#pricing" class="nav-link">Pricing</a></li>
+          <i class="fa-solid fa-bars" id="bar"></i>
         </ul>
       </nav>
     </header>
