--- a/portfolio page/port.html
+++ b/portfolio page/port.html
@@ -143,12 +143,15 @@
         </div>
     </section>
         <footer>
-            <p>
-                ***This is just a fake portfolio. All the project and contact details are not real.
-            </p>
-            <p>
-                © Created for FreecodeCamp <i class="fa fa-free-code-camp"></i>
-            </p>
+            <div id="ending">
+                <p>
+                    ***This is just a fake portfolio. All the project and contact details are not real.
+                </p>
+                <p>
+                    © Created for FreecodeCamp <i class="fa fa-free-code-camp"></i>
+                </p>
+            </div>
+            
         </footer>
 </body>
 </html>
