--- a/portfolio page/port.html
+++ b/portfolio page/port.html
@@ -92,7 +92,7 @@
             <figure id="project-item">
                 <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png">
                 <figcaption>
-                    <span id="before-after"><</span>Tic Tac Toe Game<span id="before-gafter">/></span>
+                    <span id="before-after"><</span>Tic Tac Toe Game<span id="before-after">/></span>
                 </figcaption>
             </figure>
 
